Added link to statistics.

--- a/www/documentation/dev.html
+++ b/www/documentation/dev.html
@@ -1,4 +1,4 @@
-<!-- $Id: dev.html,v 1.27 2003/09/15 21:00:20 linus Exp $ -->
+<!-- $Id: dev.html,v 1.28 2003/09/28 01:47:25 linus Exp $ -->
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -89,6 +89,8 @@
           Xenofarm result page</a> Continuous builds and tests.
 
   <li> <a href="issuezilla/">Issuezilla Documentation</a>.
+
+  <li> <a href="/nonav/documentation/issuezilla/ArgoUMLIssuesWeekly.htm">Issuezilla statistics</a>.
 
   <li> <a href="defaulthtml/cookbook/ch11.html">Processes</a>
        (Cookbook chapter 11).
