--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -45,7 +45,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40782">40782</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43842">43842</a>43842
+JDTCompilerAdapter doesn't find bootclasspath 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40782">40782</a>
 Primary working copies: unnecessary deltas on save 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43300">43300</a>
 SearchEngine(IWorkingCopy[] workingCopies) not backward compatible 
