--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -47,7 +47,7 @@ What's new in this drop</h2>
 
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43907">43907</a>
-Too many warnings
+Too many warnings reported by the jdt compiler adater
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43847">43847</a>
 IPackageFragment not updated after CUs have moved 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43879">43879</a>
