*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -46,7 +46,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43872">43872</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=44018">44018</a>
+Change superfluous semicolon error message
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43872">43872</a>
 Hierarchy does not update properly when local class eliminated [type hierarchy] 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43294">43294</a>
 Primary working copy: No updates when changed in working copy mode 
