--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -46,7 +46,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43897">43897</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=44065">44065</a>
+NPE during hot code replace 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43897">43897</a>
 No completion in cast expression
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=44061">44061</a>
 CodeAssist - no completion after class literal access
