Don't use the source page anymore. Go directly to the sources.

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,11 +1,11 @@
-<!-- $Id: project_tools.html,v 1.14 2003/09/18 14:34:31 jrobbins Exp $ -->
+<!-- $Id: project_tools.html,v 1.15 2003/10/02 21:15:33 linus Exp $ -->
 <div><a href="/servlets/ProjectNewsList">News</a></div>  
 <div><a href="/project_bugs.html">Bugs and Issues</a></div>
 <div><a href="/documentation/defaulthtml/cookbook/">Cookbook</a></div>
 <div><a href="/servlets/ProjectMemberList">Membership</a></div>
 <div><a href="/servlets/ProjectMailingListList">Mailing lists</a></div> 
 <div><a href="/servlets/ProjectDocumentList">File Sharing</a></div>
-<div><a href="/documentation/projectsource/">Source code</a></div>
+<div><a href="/source/browse/argouml/">Source code</a></div>
 <div><a href="/dev.html">Developer Zone</a></div>
   </div>
 
