Add comment for the new formatter.

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -43,6 +43,10 @@ Eclipse SDK 3.0M4 Build - ?th October 2003
 <h2>
 What's new in this drop</h2>
 <ul>
+<li>The new code formatter can be activated in the ui. See the work in progress section. This first release doesn't expose
+yet all the preferences of the new code formatter. This will be done after M4. However the old formatter option should be honored by 
+the new code formatter. This is a work in progress and all problems should be reported against JDT/Core.
+</li>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
