--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -50,7 +50,9 @@ the new code formatter. This is a work in progress and all problems should be re
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=44036">44036</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=6268">6268</a>
+Code formatting
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=44036">44036</a>
 Java code formatter wraps line too much.
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43651">43651</a>
 Linewrapping of throws declarations (if many)
