--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -50,7 +50,9 @@ the new code formatter. This is a work in progress and all problems should be re
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=6284">6284</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=16231">16231</a>
+formatter creates ugly array initializer expressions
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=6284">6284</a>
 Java formatter enhancements
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=6268">6268</a>
 Code formatting
